--- a/index.html
+++ b/index.html
@@ -16,5 +16,14 @@
              </ul>
          </nav>
      </header>
+     <div>
+         <p>Photos are more now important
+            to human life because it keeps 
+            memories of ourselves. Photobin
+            gives you a chance to view various 
+            images.  </p>
+            <p>check our images >></p>
+            <button><a href="#album">Album</a></button>
+     </div>
 </body>
 </html>
