--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
             <p>check our images >></p>
             <button><a href="#album">Album</a></button>
      </div>
+     <a href="https://www.twitter.com" target="_blank"><img src="" alt="twitter"></a>
+     <a href="https://www.facebook.com" target="_blank"><img src="" alt="facebook"></a>
+     <a href="https://www.instagram.com" target="_blank"><img src="" alt="instagram"></a>
 </body>
 </html>
