--- a/index.html
+++ b/index.html
@@ -3,30 +3,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Photobin |</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
      <header>
-         <nav>
-             <ul>
-                 <li>Photobin</li>
+         <nav class="head">
+            <div id="title">Photobin</div>
+             <ul class="links">
+                 
                  <li><a href="#about">About</a></li>
                  <li><a href="#contact">Contacts</a></li>
                  <li><a href="#faq">FAQ</a></li>
              </ul>
          </nav>
      </header>
-     <div>
+     <div class="content">
          <p>Photos are more now important
             to human life because it keeps 
             memories of ourselves. Photobin
             gives you a chance to view various 
             images.  </p>
-            <p>check our images >></p>
-            <button><a href="#album">Album</a></button>
+            <p>check our images >> <button id="press"><a href="#album">Album</a></button></p>
+            
      </div>
-     <a href="https://www.twitter.com" target="_blank"><img src="icons/twitter-logo-2429.png" alt="twitter"></a>
-     <a href="https://www.facebook.com" target="_blank"><img src="icons/icons8-facebook-48.png" alt="facebook"></a>
-     <a href="https://www.instagram.com" target="_blank"><img src="icons/icons8-instagram-logo-48.png" alt="instagram"></a>
+     <div class="socials">
+     <a href="https://www.twitter.com" target="_blank"><img src="icons/twitter-logo-2429.png" alt="twitter" height="20"></a>
+     <a href="https://www.facebook.com" target="_blank"><img src="icons/icons8-facebook-48.png" alt="facebook" height="20"></a>
+     <a href="https://www.instagram.com" target="_blank"><img src="icons/icons8-instagram-logo-48.png" alt="instagram" height="20"></a>
+     </div>
 </body>
 </html>
