--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
             <div id="title">Photobin</div>
              <ul class="links">
                  
-                 <li><a href="#about">About</a></li>
+                 <li><a href="about.html">About</a></li>
+                 <li><a href="#album">Album</a></li>
                  <li><a href="#contact">Contacts</a></li>
-                 <li><a href="#faq">FAQ</a></li>
+                 
              </ul>
          </nav>
      </header>
