--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
              <ul class="links">
                  
                  <li><a href="about.html">About</a></li>
-                 <li><a href="#album">Album</a></li>
+                 <li><a href="album.html">Album</a></li>
                  <li><a href="#contact">Contacts</a></li>
                  
              </ul>
