add contact page and contents and styles

--- a/album.html
+++ b/album.html
@@ -13,8 +13,8 @@
             <ul class="links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="#album">Album</a></li>
-                <li><a href="#contact">Contacts</a></li>
+                <li><a href="album.html">Album</a></li>
+                <li><a href="contacts.html">Contacts</a></li>
                
             </ul>
         </nav>
@@ -52,6 +52,16 @@
                 <button>View</button>
                 <button>Download</button>
             </div>
+            <div class="pics"><img src="images/That Drop.png" height="200" width="200" alt="">
+                <p>drop.</p>
+                <button>View</button>
+                <button>Download</button>
+            </div>
+            <div class="pics"><img src="/images/White Mountains.png" height="200" width="200" alt="">
+                <p>White Mountains.</p>
+                <button>View</button>
+                <button>Download</button>
+            </div>
         </div>
 
         <h2>Animals</h2>
@@ -73,6 +83,16 @@
             </div>
             <div class="pics"><img src="images/Amoled Kitty.png" height="200" width="200" alt="">
                 <p>cat-4</p>
+                <button>View</button>
+                <button>Download</button>
+            </div>
+            <div class="pics"><img src="images/masai-mara-saruni-mara-590x390.jpg" height="200" width="200" alt="">
+                <p>animal 5</p>
+                <button>View</button>
+                <button>Download</button>
+            </div>
+            <div class="pics"><img src="images/cheetah.jpeg" height="200" width="200" alt="">
+                <p>animal 6</p>
                 <button>View</button>
                 <button>Download</button>
             </div>
@@ -102,6 +122,11 @@
             </div>
             <div class="pics"><img src="images/wallpaper114.jpg" height="200" width="200" alt="">
                 <p>person 5</p>
+                <button>View</button>
+                <button>Download</button>
+            </div>
+            <div class="pics"><img src="images/Ecotourism-Safari-Masai-Mara.jpg" height="200" width="200" alt="">
+                <p>person 6</p>
                 <button>View</button>
                 <button>Download</button>
             </div>
