--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="album.html">Album</a></li>
-                <li><a href="#contact">Contacts</a></li>
+                <li><a href="contacts.html">Contacts</a></li>
                
             </ul>
         </nav>
