add hover to buttons

--- a/album.html
+++ b/album.html
@@ -96,6 +96,16 @@
                 <button>View</button>
                 <button>Download</button>
             </div>
+            <div class="pics"><img src="images/tiger.jpg" height="200" width="200" alt="">
+                <p>animal 7</p>
+                <button>View</button>
+                <button>Download</button>
+            </div>
+            <div class="pics"><img src="images/caty.jpg" height="200" width="200" alt="">
+                <p>animal 8</p>
+                <button>View</button>
+                <button>Download</button>
+            </div>
         </div>
 
         <h2 id="alb">People</h2>
@@ -127,6 +137,16 @@
             </div>
             <div class="pics"><img src="images/Ecotourism-Safari-Masai-Mara.jpg" height="200" width="200" alt="">
                 <p>person 6</p>
+                <button>View</button>
+                <button>Download</button>
+            </div>
+            <div class="pics"><img src="images/child.jpg" height="200" width="200" alt="">
+                <p>person 7</p>
+                <button>View</button>
+                <button>Download</button>
+            </div>
+            <div class="pics"><img src="images/GBWA-20190523083626.jpg" height="200" width="200" alt="">
+                <p>person 8</p>
                 <button>View</button>
                 <button>Download</button>
             </div>
