--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             memories of ourselves. Photobin
             gives you a chance to view various 
             images.  </p>
-            <p>check our images >> <button id="press"><a href="album.html">Album</a></button></p>
+            <p>check our images >> <button><a href="album.html">Album</a></button></p>
             
      </div>
      <div class="socials">
