--- a/album.html
+++ b/album.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Album |</title>
     <link rel="stylesheet" href="album.css">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 </head>
 <body>
     <header>
@@ -23,32 +24,32 @@
         <h2>Nature</h2>
         <div class="pictures">
             <div class="pics"><img src="images/Tuscany.png" height="200" width="200" alt="">
-            <p>Hills, a good view also a good place for a hike.</p>
+            <p>Hills.</p>
             <button>View</button>
             <button>Download</button>
             </div>
             <div class="pics"><img src="images/Small World.png" height="200" width="200" alt="">
-                <P>A Good angle to take a photo is from the ground.</P>
+                <P>A Good angle.</P>
                 <button>View</button>
                 <button>Download</button>
             </div>
             <div class="pics"><img src="images/Countryside .png" height="200" width="200" alt="">
-                <p>Sunset and nature evening drive.</p>
+                <p>Sunset and nature.</p>
                 <button>View</button>
                 <button>Download</button>
             </div>
             <div class="pics"><img src="images/Sun in the North.png" height="200" width="200" alt="">
-                <p>Late evening with a view of the lake.</p>
+                <p>Late evening.</p>
                 <button>View</button>
                 <button>Download</button>
             </div>
             <div class="pics"><img src="images/Shadow Shore.png" height="200" width="200" alt="">
-                <p>Shores of an ocean from aerial view.</p>
+                <p>Shores of an ocean.</p>
                 <button>View</button>
                 <button>Download</button>
             </div>
             <div class="pics"><img src="images/Wallon.png" height="200" width="200" alt="">
-                <p>Boats ready to sail,s good set-up for shoots.</p>
+                <p>Boats ready to sail.</p>
                 <button>View</button>
                 <button>Download</button>
             </div>
