--- a/album.html
+++ b/album.html
@@ -58,7 +58,7 @@
                 <button>View</button>
                 <button>Download</button>
             </div>
-            <div class="pics"><img src="/images/White Mountains.png" height="200" width="200" alt="">
+            <div class="pics"><img src="images/White Mountains.png" height="200" width="200" alt="">
                 <p>White Mountains.</p>
                 <button>View</button>
                 <button>Download</button>
