--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
      <a href="https://www.facebook.com" target="_blank"><img src="icons/icons8-facebook-48.png" alt="facebook" height="20"></a>
      <a href="https://www.instagram.com" target="_blank"><img src="icons/icons8-instagram-logo-48.png" alt="instagram" height="20"></a>
      </div>
+     <p class="last-4">&copy;Copyright 2021. Photobin</p>
 </body>
 </html>
