--- a/about.html
+++ b/about.html
@@ -56,6 +56,14 @@
                         </p>
 
                        </div>
+                       <div class="reg-links">
+                           <h5>Do you want to learn?</h5>
+                           <ul>
+                               <li><a href="log.html">Log in</a></li>
+                               <li><a href="register.html"> Register</a></li>
+                           </ul>
+
+                       </div>
 
                     
                         <div class="last-2">
