--- a/album.html
+++ b/album.html
@@ -110,11 +110,14 @@
         </div>
 
         <h2 id="alb">People</h2>
+       
         <div class="pictures">
+            <img src="/upgrade/icons/icons8-more-than-100.png" alt="next" id="next">
             <div class="pics"><img src="images/wallpaper9.jpg" height="200" width="200" alt="">
             <p>person 1</p>
             <button>View</button>
             <button>Download</button>
+            
             </div>
             <div class="pics"><img src="images/wallpaper54.jpg" height="200" width="200" alt="">
                 <P>person 2</P>
