add a function to checkbox

--- a/log.html
+++ b/log.html
@@ -11,13 +11,12 @@
     <div class="card">
         <h2>Log in</h2>
         <form action=""></form>
-        <input type="text" placeholder="enter e-mail" class="card-input" id="puts">
-        <input type="password" placeholder="enter password" class="card-input" id="puts2"><br>
+        <input type="text" placeholder="enter e-mail" class="card-input">
+        <input type="password" placeholder="enter password" class="card-input" id="puts"><br>
         <input type="checkbox" id="show" onclick="hide()" >
         <label for="show" >show password</label> <br>
         <script src="mine.js"></script>
-        <button type="button" class="card-button" onclick="warning()"> login</button> <br>
-        <p id="warn"></p>
+        <button type="button" class="card-button"> login</button> <br>
         </form>
 
         <div class="linko">
