--- a/register.html
+++ b/register.html
@@ -11,20 +11,19 @@
     <div class="card">
         <h2>Register!</h2>
         <form action="">
-        <input type="text" placeholder="enter first name" class="card-input" id="put-text">
+        <input type="text" placeholder="enter first name" class="card-input">
         <input type="text" placeholder="enter last name" class="card-input">
-        <input type="text" placeholder="enter Id number" class="card-input" id="put-number" >
+        <input type="text" placeholder="enter Id number" class="card-input">
         <input type="text" placeholder="enter phone number" class="card-input">
         <input type="date" placeholder="d.o.b" class="card-input" >
         <input type="text" placeholder="enter e-mail" class="card-input">
-        <input type="password" placeholder="enter password" class="card-input"  id="puts2">
-        <input type="password" placeholder="confirm password" class="card-input" id="puts3"><br>
+        <input type="password" placeholder="enter password" class="card-input"  id="puts">
+        <input type="password" placeholder="confirm password" class="card-input" id="puts2"><br>
         <input type="checkbox" id="show" onclick="hide()" >
         <label for="show">Show password</label><br>
         <script src="mine.js"></script>
-        <button type="button" class="card-button" onclick="press()">SUBMIT</button>
+        <button type="button" class="card-button">SUBMIT</button>
         </form>
-        <p id="show-text" style="color: red;"></p>
         
         <p id="reg">Already registered? <a href="log.html"> Log in</a></p>
         <p class="last-4">&copy;Copyright 2021. Photobin</p>
